syntax = "proto3";

package orderservice;

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrderStatus (GetOrderStatusRequest) returns (GetOrderStatusResponse);
}

message CreateOrderRequest {
  string customer_name = 1;
  repeated string items = 2;
  double total = 3;
}

message CreateOrderResponse {
  string order_id = 1;
  string status = 2;
}

message GetOrderStatusRequest {
  string order_id = 1;
}

message GetOrderStatusResponse {
  string order_id = 1;
  string customer_name = 2;
  repeated string items = 3;
  double total = 4;
  string status = 5;
}
